// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExchangeTransactionsTable should render 1`] = `
<div>
  <div
    data-testid="ExchangeTransactionsTable"
  >
    <div
      class="Table__TableWrapper-sc-1gcp0fb-0 jHfvAR -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
            role="row"
          >
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-1"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                  ID
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                  Exchange
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                  Date
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity ml-2"
                >
                  <div
                    class="sc-bdvvtL Cfvxc transition-transform"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                  From
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                  To
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-24 min-w-24"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-1"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden no-border"
              >
                <div>
                  Actions
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
            data-testid="TableRow"
          >
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY"
              >
                <button
                  class="link"
                  type="button"
                >
                  <div
                    class="sc-bdvvtL fCrhkg"
                    height="16"
                    width="16"
                  >
                    <svg>
                      magnifying-glass-id.svg
                    </svg>
                  </div>
                </button>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq font-semibold"
              />
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
              >
                01.01.2021 12:00 AM
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
              >
                <div
                  class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400 ring-theme-background"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      sent.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Label-sc-4akkzw-0 iXzgUi"
                  color="danger"
                >
                  <div
                    class="flex space-x-1 items-stretch"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 BTC
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
              >
                <div
                  class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-success-200 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      received.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Label-sc-4akkzw-0 hhvRsd"
                  color="success"
                >
                  <div
                    class="flex space-x-1 items-stretch"
                  >
                    <div
                      class="flex items-center justify-center bg-theme-success-200 dark:bg-theme-success-600 -ml-1.5 px-2"
                      data-testid="AmountLabel__hint"
                    >
                      <div
                        class="sc-bdvvtL Cfvxc dark:text-white"
                        height="10"
                        width="10"
                      >
                        <svg>
                          hint-small.svg
                        </svg>
                      </div>
                    </div>
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      + 100 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
              >
                <span>
                  <div
                    class="sc-bdvvtL qGXhc text-theme-secondary-500 dark:text-theme-secondary-700"
                    height="20"
                    width="20"
                  >
                    <svg>
                      clock.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end text-theme-secondary-text"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 fxPCrX"
                  data-testid="TableRemoveButton"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdvvtL qGXhc"
                      height="20"
                      width="20"
                    >
                      <svg>
                        trash.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
            data-testid="TableRow"
          >
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY"
              >
                <button
                  class="link"
                  type="button"
                >
                  <div
                    class="sc-bdvvtL fCrhkg"
                    height="16"
                    width="16"
                  >
                    <svg>
                      magnifying-glass-id.svg
                    </svg>
                  </div>
                </button>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq font-semibold"
              />
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
              >
                01.01.2021 12:00 AM
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
              >
                <div
                  class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400 ring-theme-background"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      sent.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Label-sc-4akkzw-0 iXzgUi"
                  color="danger"
                >
                  <div
                    class="flex space-x-1 items-stretch"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 BTC
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
              >
                <div
                  class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-success-200 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      received.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Label-sc-4akkzw-0 hhvRsd"
                  color="success"
                >
                  <div
                    class="flex space-x-1 items-stretch"
                  >
                    <div
                      class="flex items-center justify-center bg-theme-success-200 dark:bg-theme-success-600 -ml-1.5 px-2"
                      data-testid="AmountLabel__hint"
                    >
                      <div
                        class="sc-bdvvtL Cfvxc dark:text-white"
                        height="10"
                        width="10"
                      >
                        <svg>
                          hint-small.svg
                        </svg>
                      </div>
                    </div>
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      + 100 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
              >
                <span>
                  <div
                    class="sc-bdvvtL qGXhc text-theme-secondary-500 dark:text-theme-secondary-700"
                    height="20"
                    width="20"
                  >
                    <svg>
                      clock.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end text-theme-secondary-text"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 fxPCrX"
                  data-testid="TableRemoveButton"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdvvtL qGXhc"
                      height="20"
                      width="20"
                    >
                      <svg>
                        trash.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
            data-testid="TableRow"
          >
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY"
              >
                <button
                  class="link"
                  type="button"
                >
                  <div
                    class="sc-bdvvtL fCrhkg"
                    height="16"
                    width="16"
                  >
                    <svg>
                      magnifying-glass-id.svg
                    </svg>
                  </div>
                </button>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq font-semibold"
              />
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
              >
                01.01.2021 12:00 AM
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
              >
                <div
                  class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400 ring-theme-background"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      sent.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Label-sc-4akkzw-0 iXzgUi"
                  color="danger"
                >
                  <div
                    class="flex space-x-1 items-stretch"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 BTC
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq space-x-3"
              >
                <div
                  class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-theme-success-200 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      received.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Label-sc-4akkzw-0 hhvRsd"
                  color="success"
                >
                  <div
                    class="flex space-x-1 items-stretch"
                  >
                    <div
                      class="flex items-center justify-center bg-theme-success-200 dark:bg-theme-success-600 -ml-1.5 px-2"
                      data-testid="AmountLabel__hint"
                    >
                      <div
                        class="sc-bdvvtL Cfvxc dark:text-white"
                        height="10"
                        width="10"
                      >
                        <svg>
                          hint-small.svg
                        </svg>
                      </div>
                    </div>
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      + 100 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center"
              >
                <span>
                  <div
                    class="sc-bdvvtL qGXhc text-theme-secondary-500 dark:text-theme-secondary-700"
                    height="20"
                    width="20"
                  >
                    <svg>
                      clock.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end text-theme-secondary-text"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 fxPCrX"
                  data-testid="TableRemoveButton"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdvvtL qGXhc"
                      height="20"
                      width="20"
                    >
                      <svg>
                        trash.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`ExchangeTransactionsTable should render compact 1`] = `
<div>
  <div
    data-testid="ExchangeTransactionsTable"
  >
    <div
      class="Table__TableWrapper-sc-1gcp0fb-0 jHfvAR -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
            role="row"
          >
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-1"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                  ID
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                  Exchange
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                  Date
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity ml-2"
                >
                  <div
                    class="sc-bdvvtL Cfvxc transition-transform"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                  From
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div>
                  To
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="sc-bdvvtL Cfvxc transition-transform transform rotate-180"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg>
                      chevron-down-small.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder w-24 min-w-24"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-1"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden no-border"
              >
                <div>
                  Actions
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
            data-testid="TableRow"
          >
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 UdZIx"
              >
                <button
                  class="link"
                  type="button"
                >
                  <div
                    class="sc-bdvvtL fCrhkg"
                    height="16"
                    width="16"
                  >
                    <svg>
                      magnifying-glass-id.svg
                    </svg>
                  </div>
                </button>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD font-semibold"
              />
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD"
              >
                01.01.2021 12:00 AM
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD space-x-3"
              >
                <span
                  class="w-5 h-5 flex items-center border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      sent.svg
                    </svg>
                  </div>
                </span>
                <div
                  class="Label-sc-4akkzw-0 fhDzha"
                  color="danger"
                >
                  <div
                    class="flex space-x-1 items-center"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 BTC
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD space-x-3"
              >
                <span
                  class="w-5 h-5 flex items-center border-theme-success-200 text-theme-success-600 dark:border-theme-success-600"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      received.svg
                    </svg>
                  </div>
                </span>
                <div
                  class="Label-sc-4akkzw-0 bxfWpB"
                  color="success"
                >
                  <div
                    class="flex space-x-1 items-center"
                  >
                    <div
                      class="flex items-center justify-center bg-theme-success-200 dark:bg-theme-success-600 w-5 h-5 rounded-full"
                      data-testid="AmountLabel__hint"
                    >
                      <div
                        class="sc-bdvvtL Cfvxc dark:text-white"
                        height="10"
                        width="10"
                      >
                        <svg>
                          hint-small.svg
                        </svg>
                      </div>
                    </div>
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      + 100 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center"
              >
                <span>
                  <div
                    class="sc-bdvvtL qGXhc text-theme-secondary-500 dark:text-theme-secondary-700"
                    height="20"
                    width="20"
                  >
                    <svg>
                      clock.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end text-theme-secondary-text"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF text-theme-danger-400 hover:text-theme-danger-500"
                  data-testid="TableRemoveButton"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdvvtL fCrhkg"
                      height="16"
                      width="16"
                    >
                      <svg>
                        trash.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
            data-testid="TableRow"
          >
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 UdZIx"
              >
                <button
                  class="link"
                  type="button"
                >
                  <div
                    class="sc-bdvvtL fCrhkg"
                    height="16"
                    width="16"
                  >
                    <svg>
                      magnifying-glass-id.svg
                    </svg>
                  </div>
                </button>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD font-semibold"
              />
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD"
              >
                01.01.2021 12:00 AM
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD space-x-3"
              >
                <span
                  class="w-5 h-5 flex items-center border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      sent.svg
                    </svg>
                  </div>
                </span>
                <div
                  class="Label-sc-4akkzw-0 fhDzha"
                  color="danger"
                >
                  <div
                    class="flex space-x-1 items-center"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 BTC
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD space-x-3"
              >
                <span
                  class="w-5 h-5 flex items-center border-theme-success-200 text-theme-success-600 dark:border-theme-success-600"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      received.svg
                    </svg>
                  </div>
                </span>
                <div
                  class="Label-sc-4akkzw-0 bxfWpB"
                  color="success"
                >
                  <div
                    class="flex space-x-1 items-center"
                  >
                    <div
                      class="flex items-center justify-center bg-theme-success-200 dark:bg-theme-success-600 w-5 h-5 rounded-full"
                      data-testid="AmountLabel__hint"
                    >
                      <div
                        class="sc-bdvvtL Cfvxc dark:text-white"
                        height="10"
                        width="10"
                      >
                        <svg>
                          hint-small.svg
                        </svg>
                      </div>
                    </div>
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      + 100 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center"
              >
                <span>
                  <div
                    class="sc-bdvvtL qGXhc text-theme-secondary-500 dark:text-theme-secondary-700"
                    height="20"
                    width="20"
                  >
                    <svg>
                      clock.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end text-theme-secondary-text"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF text-theme-danger-400 hover:text-theme-danger-500"
                  data-testid="TableRemoveButton"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdvvtL fCrhkg"
                      height="16"
                      width="16"
                    >
                      <svg>
                        trash.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </td>
          </tr>
          <tr
            class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
            data-testid="TableRow"
          >
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 UdZIx"
              >
                <button
                  class="link"
                  type="button"
                >
                  <div
                    class="sc-bdvvtL fCrhkg"
                    height="16"
                    width="16"
                  >
                    <svg>
                      magnifying-glass-id.svg
                    </svg>
                  </div>
                </button>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD font-semibold"
              />
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD"
              >
                01.01.2021 12:00 AM
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD space-x-3"
              >
                <span
                  class="w-5 h-5 flex items-center border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      sent.svg
                    </svg>
                  </div>
                </span>
                <div
                  class="Label-sc-4akkzw-0 fhDzha"
                  color="danger"
                >
                  <div
                    class="flex space-x-1 items-center"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      - 1 BTC
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD space-x-3"
              >
                <span
                  class="w-5 h-5 flex items-center border-theme-success-200 text-theme-success-600 dark:border-theme-success-600"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      received.svg
                    </svg>
                  </div>
                </span>
                <div
                  class="Label-sc-4akkzw-0 bxfWpB"
                  color="success"
                >
                  <div
                    class="flex space-x-1 items-center"
                  >
                    <div
                      class="flex items-center justify-center bg-theme-success-200 dark:bg-theme-success-600 w-5 h-5 rounded-full"
                      data-testid="AmountLabel__hint"
                    >
                      <div
                        class="sc-bdvvtL Cfvxc dark:text-white"
                        height="10"
                        width="10"
                      >
                        <svg>
                          hint-small.svg
                        </svg>
                      </div>
                    </div>
                    <span
                      class="whitespace-nowrap"
                      data-testid="Amount"
                    >
                      + 100 ARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center"
              >
                <span>
                  <div
                    class="sc-bdvvtL qGXhc text-theme-secondary-500 dark:text-theme-secondary-700"
                    height="20"
                    width="20"
                  >
                    <svg>
                      clock.svg
                    </svg>
                  </div>
                </span>
              </div>
            </td>
            <td>
              <div
                class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end text-theme-secondary-text"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF text-theme-danger-400 hover:text-theme-danger-500"
                  data-testid="TableRemoveButton"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdvvtL fCrhkg"
                      height="16"
                      width="16"
                    >
                      <svg>
                        trash.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
